# RhysOS2

./: .gitignore  CMakeLists.txt  Dockerfile  build.pl  build.py  kernel_log.txt  linker.ld  make_hdd.pl  make_keymap.pl  run.sh
boot/: boot.nasm
bootloader/: boot.nasm  bprint.nasm  bprint_p.nasm  gdt.nasm  protected_mode.nasm  video_mode.nasm
bootloader/disk/: floppy.nasm  hdd.nasm
grub/: grub.cfg
kernel/: CMakeLists.txt  link.ld  main.c  mkfile.py  string.c  string.h  tty.c  tty.h  type.h
kernel/arch/: vga.h
kernel/arch/x86/: vga.c
kernel/fs/: devfs.c  devfs.h  fs.c  fs.h
kernel/include/: Math.h  Panic.h  String.h  TextEdit.h  Types.h  VGA.h
kernel/include/FS/: UStar.h
kernel/include/IO/: ATA.h  Glyphs.h  Graphics.h  Keyboard.h  Keymap.h  Ports.h  Serial.h  TTY.h
kernel/include/Interrupts/: Clock.h  IDT.h  ISR.h
kernel/include/Memory/: GDT.h  Heap.h  Memory.h  Paging.h  malloc.h
kernel/include/libc/: List.h  Syscall.h
kernel/mem/: phys.c  phys.h
kernel/src/: Math.cpp  String.cpp  TextEdit.cpp  main.cpp
kernel/src/FS/: UStar.cpp
kernel/src/IO/: ATA.cpp  Keyboard.cpp
kernel/src/Memory/: Heap.cpp  Memory.cpp  malloc.cpp
kernel/src/boot/: boot.nasm
kernel/src/libc/: List.cpp  Syscall.cpp
kernel/src/x86/IO/: Graphics.cpp  Ports.cpp  Serial.cpp  TTY.cpp  io.nasm
kernel/src/x86/Interrupts/: Clock.cpp  IDT.cpp  IRQ_asm.nasm  ISR.cpp  ISR_asm.nasm
kernel/src/x86/Memory/: GDT.cpp  GDT_asm.nasm  Paging.cpp
